# BackupPC-Clone

./: .gitignore  .scrutinizer.yml  LICENSE.md  README.rst  build.xml  composer.json  pyproject.toml  setup.py
backuppc_clone/: CloneIO.py  Config.py  DataLayer.py  ProgressBar.py  __init__.py  misc.py
backuppc_clone/application/: BackupPcCloneApplication.py
backuppc_clone/command/: AutoCommand.py  AuxiliaryFilesCommand.py  BackupCloneCommand.py  BackupDeleteCommand.py  BackupPreScanCommand.py  BaseCommand.py  CloneBackupCommand.py  DeleteBackupCommand.py  DeleteHostCommand.py  HostDeleteCommand.py  InitCloneCommand.py  InitOriginalCommand.py  NagiosCommand.py  PoolCommand.py  PreScanBackupCommand.py  SyncAuxiliaryCommand.py  TraversePerformanceTestCommand.py  VacuumCommand.py
backuppc_clone/exception/: BackupPcCloneException.py
backuppc_clone/helper/: AuxiliaryFileScanner.py  AuxiliaryFiles.py  BackupClone.py  BackupDelete.py  BackupInfoScanner.py  BackupScanner.py  HostDelete.py  PoolScanner.py  PoolSync.py
backuppc_clone/lib/ddl/: 0100_create_tables.sql
backuppc_clone/lib/erd/: backuppc-clone.ecm
backuppc_clone/lib/psql/: backup_delete.psql  backup_empty.psql  backup_get_all.psql  backup_get_next.psql  backup_get_obsoletel.psql  backup_get_partially_cloned.psql  backup_get_stats.psql  backup_required_clone_pool_files_prepare.psql  backup_required_clone_pool_files_yield.psql  backup_set_in_progress.psql  backup_tree_prepare.psql  backup_tree_yield.psql  clone_pool_delete_missing.psql  clone_pool_obsolete_files_prepare.psql  clone_pool_obsolete_files_yield.psql  host_deletel.psql  host_get_obsolete.psql  original_backup_insert.psql  parameter_get_value.psql  parameter_update_value.psql  pool_insert_new_original.psql  pool_update_by_inode_original.psql
backuppc_clone/style/: BackupPcCloneStyle.py
docs/: Makefile  conf.py  getting-started.rst  index.rst  license.rst  limitations.rst  miscellaneous.rst
