[tool.poetry]
name = "BackupPC-Clone"
version = "1.0.1"
description = "A tool for cloning the data of a BackupPC instance"
authors = ["P.R. Water <p.r.water@setbased.nl>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SetBased/BackupPC-Clone"
documentation = "https://backuppc-clone.readthedocs.io"
keywords = ["BackupPC", "clone"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: System Administrators',
    'Topic :: System :: Archiving :: Backup',
    'License :: OSI Approved :: MIT License',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10.0"
cleo = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-common = "poetry.core.masonry.api"
